aws/kubernetes/gitea-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: gitea-testing
    labels:
        app: gitea
