aws/kubernetes/efs.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: efs-provisioner
  namespace: gitea-testing
spec:
  replicas: 1
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app: efs-provisioner
    spec:
      serviceAccount: efs-provisioner
      containers:
        - name: efs-provisioner
          image: quay.io/external_storage/efs-provisioner:latest
          volumeMounts:
            - name: pv-volume
              mountPath: /persistentvolumes
      volumes:
        - name: pv-volume
          nfs:
            server: fs-0e009babe96c189f4.efs.eu-central-1.amazonaws.com
            path: /
