aws/kubernetes/gitea_v2.yaml
#kind: StorageClass
#apiVersion: storage.k8s.io/v1
#metadata:
#  name: efs-sc
#  namespace: gitea-testing
#  labels:
#    app: gitea
#    type: efs
#provisioner: efs.csi.aws.com
#parameters:
#  provisioningMode: efs-ap
#  fileSystemId: fs-0f0afa1e2739f5147
#  directoryPerms: "777"
#  uid: 1000
#  gid: 1000
  #gidRangeStart: "1000" # optional
  #gidRangeEnd: "1000" # optional
  #  basePath: "/gitea" # optional
 
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  ports:
    - protocol: TCP
      port: 3000
      nodePort: 30339
  selector:
    app: gitea
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
#      securityContext:
#        runAsUser: 1000
#        runAsGroup: 1000
#        fsGroup: 1000
#      initContainers:
#        - name: take-data-dir-ownership
#          image: alpine:3
#          command:
#          - mkdir
#          - 1gitea
#          command:
#          - chown
#          - -R
#          - 1000:1000
#          - 1gitea
#          volumeMounts:
#          - name: efs
#            mountPath: /mnt

#        - name: init-setup-db
#          image: mysql:5.7
#          env:
#          - name: GITEA_DB_USER
#            valueFrom:
#              secretKeyRef:
#                name: mysql-gitea-secret
#                key: username
#          - name: GITEA_DB_PASS
#            valueFrom:
#              secretKeyRef:
#                name: mysql-gitea-secret
#                key: password
#          command:
#            - "/bin/sh"
#            - "-c"
#            - "until mysql --host=mysql.gitea-testing --user=$GITEA_DB_USER --password=$GITEA_DB_PASS --execute=\"SELECT 1;\"; do echo waiting for mysql; sleep 2; done;" 
#        - name: init-setup-redis
#          image: busybox:1.28
#          command: ['sh', '-c', "until nslookup redis.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for redis; sleep 2; done"]
      containers:
      - image: tsilyk/gitea-server:latest
        name: gitea
        ports:
        - containerPort: 3000
          name: gitea
        volumeMounts:
        - name: efs
          mountPath: /var/lib/gitea
      volumes:
      - name: efs
        persistentVolumeClaim:
          claimName: efs-claim
