aws/kubernetes/gitea_v4.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  ports:
    - protocol: TCP
      port: 3000
      #nodePort: 30339
  selector:
    app: gitea
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
#      securityContext:
#        runAsUser: 1000
#        runAsGroup: 1000
#        fsGroup: 1000
      containers:
      #- image: tsilyk/gitea-server:latest
      - image: 085054811666.dkr.ecr.eu-central-1.amazonaws.com/gitea:v2.8
        name: gitea
        ports:
        - containerPort: 3000
          name: gitea
        volumeMounts:
        - name: efs
          mountPath: /var/lib/gitea
      volumes:
      - name: efs
        persistentVolumeClaim:
          claimName: efs-claim1
